# agentic-engineering-platform

./: .gitignore  AGENTS.md  Agentic_Engineering_Platform.code-workspace  README.md  agentic-engineering-platform-dev.code-workspace  case_study_03_Human_in_the_loop_prompt_refinement_for_reliable_agent_execution.md  engineering_learning_dump.ipynb  pyproject.toml
.github/: copilot-instructions.md
.github/agent_instructions/: README.md  agent.md
.github/instructions/: general-agent.instructions.md
.github/skills/: README.md
agent-instruction-control-plane/docs/: README.md
ai-human-engineering-collaboration-case-studies/: README.md  case_study_04_agent_control_plane_convergence.md  git-fetch-explainer-diagram.md
ai-inference-telemetry-economics-observatory/: mvp-run.md  pyproject.toml
ai-inference-telemetry-economics-observatory/src/observatory/: __init__.py  adapter.py  cli.py  mock_server.py
ai-inference-telemetry-economics-observatory/tests/: test_adapter_flow.py
components/agent_instruction_control_plane/: README.md
components/engineering_knowledge_base/: README.md
developer-learning-retrieval/: README.md  design-2.md
docs/: README.md  ai-assisted-development-arch-diagram.drawio  engineering-knowledge-base.md  periodic_learning_retrieval_system.md  portfolio_context.md  template_adoption_models.md
docs/architecture/: README.md  engineering-knowledge-base.md
docs/case_studies/: README.md  (+1 more)
docs/operations/: README.md
engineering_knowledge_base/: README.md
evidence/: README.md
platform/: README.md
scripts/: README.md
shared/: README.md
(+68 files in other folders)
