[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-inference-observatory"
version = "0.1.0"
description = "CLI interaction adapter for AI inference telemetry"
requires-python = ">=3.11"

[project.scripts]
observatory = "observatory.cli:main"
observatory-mock = "observatory.mock_server:main"

[tool.setuptools.packages.find]
where = ["src"]
